# smart9

./: CMakeLists.txt  调试记录
inc/: define.h  global.h  type.h  var.c  var.h
project/: Makefile  bak.json  d9main  d9main.sh  smart9_scheme.json  test.sh
project/conf/prod/: addr.conf
project/conf/release/: addr.conf
project/conf/test/: addr.conf
src/: d9main.c  d9main.sh  data_sync.h  main.c  main.h  powerup.c  powerup.h  selfcheck.c  selfcheck.h
src/common/: common.mk  common_var.c  common_var.h  d9.service  data_sync.c  define.h  global.h  powerup.c  powerup.h  prt_string.c  prt_string.h  selfcheck.c  selfcheck.h  type.h  var.c  var.h
src/crypto/bdp/: hafs.h
src/db/: db.c  db.h
src/net/: mongoose.c  net.c  net.h  net.mk
src/net/curl/: curl.h
src/prt/: esc2bmp.h  prt.c  prt.h  prt.mk  uart.c  uart.h
src/tools/: NetStatus.c  NetStatus.h  b64.h  db_api.c  db_api.h  dbg.c  dbg.h  encode.c  tools.mk
src/tools/hafs/: hafs.h  libpahafs.so.1.0.1
test/bdp/: CMakeLists.txt  main.c
test/mqtt/: CMakeLists.txt  d9srv.js
test/tcp/: .gitignore
test/zip/: CMakeLists.txt  test.c
util/: bmp.c  bmp.h  dbg.c  dbg.h
